# lm15-rs

./: Cargo.toml  README.md
src/: api.rs  capabilities.rs  client.rs  conversation.rs  cost.rs  curl.rs  errors.rs  factory.rs  lib.rs  middleware.rs  model.rs  model_catalog.rs  result.rs  transport.rs  types.rs
src/provider/: anthropic.rs  common.rs  gemini.rs  mod.rs  openai.rs
tests/: capabilities_test.rs  client_test.rs  conversation_test.rs  cost_test.rs  cost_tracking_test.rs  errors_test.rs  middleware_test.rs  model_test.rs  result_test.rs  types_test.rs
