[package]
name = "lm15"
version = "0.1.0"
edition = "2024"
description = "One interface for OpenAI, Anthropic, and Gemini. Minimal dependencies."
license = "MIT"
repository = "https://github.com/lm15-dev/lm15-rs"
keywords = ["llm", "openai", "anthropic", "gemini", "ai"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
base64 = "0.22"
